--- a/package.json
+++ b/package.json
@@ -24,11 +24,9 @@
     "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.22.0",
-    "postcss-loader": "^0.9.1",
-    "postcss-nested": "^1.0.0",
-    "postcss-simple-vars": "^3.0.0",
-    "precss": "^1.4.0",
+    "node-sass": "^3.9.3",
     "progress-bar-webpack-plugin": "^1.9.0",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.1.0-beta.20",
