--- a/package.json
+++ b/package.json
@@ -5,27 +5,32 @@
   "main": "",
   "scripts": {
     "test": "echo Tests are comming",
-    "build": "webpack --config build/webpack.prod.js",
+    "build": "webpack --display-error-details --config build/webpack.prod.js",
     "dev": "node build/server.js"
   },
   "author": "Otis Wright <otis@webfox.co.nz>",
   "license": "MIT",
   "dependencies": {
-    "bootstrap-sass": "^3.3.7"
+    "bootstrap-sass": "^3.3.7",
+    "font-awesome": "^4.6.3",
+    "jquery": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-1": "^6.13.0",
+    "bootstrap-loader": "^2.0.0-beta.10",
     "cross-env": "^2.0.0",
     "css-loader": "^0.23.1",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.3",
     "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
+    "font-awesome-loader": "^1.0.0",
+    "imports-loader": "^0.6.5",
     "node-sass": "^3.9.3",
     "progress-bar-webpack-plugin": "^1.9.0",
+    "resolve-url-loader": "^1.6.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
